<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

  <ImageView
      android:id="@+id/titleLogo"
      android:layout_width="60dp"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="40dp"

      android:layout_marginTop="15dp"
      android:src="@drawable/logo_group_toolbar"
      />

  <TextView
      android:id="@+id/tvRadioStation"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/titleLogo"
      android:background="?selectableItemBackground"
      android:padding="20dp"
      android:text="@string/label_radio"
      android:textColor="@color/color_text_menu"
      android:textSize="@dimen/text_size_large"
      />

  <TextView
      android:id="@+id/tvMenuAlarm"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/tvRadioStation"
      android:background="?selectableItemBackground"
      android:padding="20dp"
      android:text="@string/label_alarm"
      android:textColor="@color/color_text_menu"
      android:textSize="@dimen/text_size_large"
      />

  <TextView
      android:id="@+id/tvMenuContest"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/tvMenuAlarm"
      android:background="?selectableItemBackground"
      android:padding="20dp"
      android:text="@string/label_contests"
      android:textColor="@color/color_text_menu"
      android:textSize="@dimen/text_size_large"
      />

  <TextView
      android:id="@+id/tvMenuWatch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/tvMenuContest"
      android:background="?selectableItemBackground"
      android:padding="20dp"
      android:text="@string/label_watch"
      android:textColor="@color/color_text_menu"
      android:textSize="@dimen/text_size_large"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:layout_below="@+id/tvMenuWatch"
      android:background="@color/grey"
      />

  <TextView
      android:id="@+id/tvRateApp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/tvRadioStation"
      android:layout_alignStart="@+id/tvRadioStation"
      android:layout_below="@+id/tvMenuWatch"
      android:background="?selectableItemBackground"
      android:padding="20dp"
      android:text="@string/label_rate_app"
      android:textColor="@color/color_text_menu"
      android:textSize="@dimen/text_size_large"
      android:visibility="gone"
      />

  <TextView
      android:id="@+id/tvFeedback"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/tvRateApp"
      android:layout_alignStart="@+id/tvRateApp"
      android:layout_below="@+id/tvRateApp"
      android:background="?selectableItemBackground"
      android:padding="20dp"
      android:text="@string/label_feedback"
      android:textColor="@color/color_text_menu"
      android:textSize="@dimen/text_size_large"
      />

  <TextView
      android:id="@+id/tvPrivacy"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/tvRateApp"
      android:layout_alignStart="@+id/tvRateApp"
      android:layout_below="@+id/tvFeedback"
      android:background="?selectableItemBackground"
      android:padding="20dp"
      android:text="@string/label_privacy"
      android:textColor="@color/color_text_menu"
      android:textSize="@dimen/text_size_large"
      />

  <TextView
      android:id="@+id/tvClose"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/tvRateApp"
      android:layout_alignStart="@+id/tvRateApp"
      android:layout_below="@+id/tvPrivacy"
      android:background="?selectableItemBackground"
      android:padding="20dp"
      android:text="@string/label_close"
      android:textColor="@color/color_text_menu"
      android:textSize="@dimen/text_size_large"
      />

</RelativeLayout>