<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <rmg.droid.rmgcore.ui.custom.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_back"
                />

            <LinearLayout
                android:id="@+id/translationView"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?colorAccent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivTranslation"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="start"
                    android:scaleType="center"
                    android:background="?attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_translation" />

                <TextView
                    android:id="@+id/tvTranslation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/label_now_is_translation"
                    android:textColor="@color/white"
                    android:background="?attr/selectableItemBackground"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="end"
                    android:id="@+id/ivCloseTranslation"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_close" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomTabsLayout"
            android:layout_below="@+id/toolbarLayout" />

        <LinearLayout
            android:id="@+id/bottomTabsLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/btnRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/label_radio"
                android:textColor="@color/color_selectable"
                android:textSize="@dimen/text_size_xsmall"
                tools:drawableTop="@drawable/ic_radio" />

            <TextView
                android:id="@+id/btnAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/label_wakeuper"
                android:textColor="@color/color_selectable"
                android:textSize="@dimen/text_size_xsmall"
                tools:drawableTop="@drawable/ic_alarm" />

            <TextView
                android:id="@+id/btnContest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/label_perks"
                android:textColor="@color/color_selectable"
                android:textSize="@dimen/text_size_xsmall"
                tools:drawableTop="@drawable/ic_contest" />

            <TextView
                android:id="@+id/btnWatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/label_watch"
                android:textColor="@color/color_selectable"
                android:textSize="@dimen/text_size_xsmall"
                tools:drawableTop="@drawable/ic_watch" />

            <TextView
                android:id="@+id/btnMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:text="@string/label_more"
                android:textColor="@color/color_selectable"
                android:textSize="@dimen/text_size_xsmall"
                tools:drawableTop="@drawable/ic_more_grey" />

        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/leftMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>
