<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/fmtVideoExoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/fmtVideoProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/fmtVideoTvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_error_loading"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/fmtVideoNoTranslation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@color/accent"
            android:drawablePadding="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/label_translation_is_not_yet"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:visibility="gone" />


        <FrameLayout
            android:id="@+id/fmtVideoLPlayback"
            android:background="#11000000"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/fmtVideoTvNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:drawablePadding="@dimen/spacing_medium"
                android:padding="@dimen/spacing_medium"
                android:text="@string/label_now"
                />

            <ImageButton
                android:id="@+id/fmtVideoBtnFullscreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/spacing_medium"
                app:srcCompat="@drawable/ic_fullscreen" />

        </FrameLayout>

    </FrameLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/fmtVideoRvVideos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>