<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:id="@+id/tvContestTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/label_summer_on_million"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.CardView
            android:id="@+id/cvChannelCover"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="@dimen/spacing_medium"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp">

            <ImageView
                android:id="@+id/imgChannelCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_placeholder" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tvContestLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/label_summer_on_million"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvChannelCover" />

        <TextView
            android:id="@+id/tvContestDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:text="@string/label_summer_text"
            android:textColor="#9b9b9b"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContestLabel" />

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvContestDescription"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spacing_medium"
            android:background="@drawable/bg_button_red"
            android:text="@string/label_details"
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContestDescription"
            app:layout_constraintVertical_bias="0.125" />

    </LinearLayout>
</ScrollView>